# GView

./: CMakeLists.txt  vcpkg.json
GenericPlugins/FileAnalysis/: CMakeLists.txt
GenericPlugins/FileAnalysis/include/: FileAnalysis.hpp
GenericPlugins/FileAnalysis/src/: CMakeLists.txt  FileAnalysis.cpp
curl/: libcurl_a.lib
